--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     
-    <h1></h1>
+    <h1>The Game</h1>
 
     <button>Show Greeting</button>    
     <script src="js/main.js"></script>
